mi tercer cambio

--- a/index.html
+++ b/index.html
@@ -1,2 +1,29 @@
-Esta es mi primera página web.
-Responsive de Matemática 21.
+<!DOCTYPE html> <!-- version del html -->
+<html lang="es"> <!-- lenguaje español paea mi web -->
+    <head>
+        <meta charset="UTF-8">  <!--para caracteres tilde o ñ-->
+        <meta name="descripcion" content="Curso Desarrollo Web Front en Huacho>"> 
+        <meta name="keywords" content="Front, Huacho, Curso">
+        <style>
+            p {
+                color:chartreuse;
+            }
+        </style>
+        <title> :: DevMaster :: </title> <!-- titulo de la web -->
+    </head>
+    <body>
+        <h1>Devmaster con escrito h1</h1>
+        <!--Ruta Absoluta-->
+        <img src="https://larepublica.pe/resizer/8vzfJugHQKz3QqQ6HUxLTAsROXM=/1200x660/top/arc-anglerfish-arc2-prod-gruporepublica.s3.amazonaws.com/public/MWDXYSLQ3RD6BBRNONKWQ4PCPY.png" alt="Mate Pro 30">
+        <!-- contindo la web -->
+        <p>Devmater - Ftontend - Grupo 08</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem odit dolorum perspiciatis, esse dolorem officiis tenetur, libero quibusdam, tempora cum obcaecati at facere ducimus? Aliquam, nobis. Ipsam culpa voluptatum hic.</p>
+        <h2>Devmaster con escrito h2</h2>
+        <h3>Devmaster con escrito h3</h3>
+        <h4>Devmaster con escrito h4</h4>
+        <h5>Devmaster con escrito h5</h5>
+        <h6>Devmaster con escrito h6</h6>
+    </body>
+</html>
+
+
