--- a/Sesion-2/ejercicio-4.html
+++ b/Sesion-2/ejercicio-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web-Master</title>
+    <title>Solo titulo</title>
 </head>
 <body>
     <form></form>
