--- a/Sesion-2/ejercicio-4.html
+++ b/Sesion-2/ejercicio-4.html
@@ -7,7 +7,13 @@
     <title>Solo titulo</title>
 </head>
 <body>
-    <form></form>
+    <form action="contacto-exitoso.html" method="POST" autocomplete="off">
+        <label for="user">Usuario:</label> 
+        <input type="text" id="user" name="user"required><br>
+        <label for="pass">Contraseña:</label>
+        <input type="password" id="pass" name="pass" required><br>
+        <input type="submit">
+    </form>
 
 </body>
 </html>
